--- a/raycastonsteroids.csproj
+++ b/raycastonsteroids.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTK" Version="4.9.4" />
+    <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
+  </ItemGroup>
+
+<ItemGroup>
+  <Compile Include="scripts\**\*.cs" />
+</ItemGroup>
+
+
 </Project>
